--- a/views/index.html
+++ b/views/index.html
@@ -10,10 +10,9 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v7.1.0/css/all.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"
-        integrity="sha256-XF29CBwU1MWLaGEnsELogU6Y6rcc5nCkhhx89nFMIDQ=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/fontawesome.min.css" crossorigin="anonymous">
+    <script src="/js/tailwindcss-3.4.17.min.js"></script>
+    <script src="/js/chartjs-4.5.0.min.js"></script>
 
     <style>
         .bg-black-alt {
@@ -37,7 +36,7 @@
             <!--Top-->
             <div class="p-4 flex flex-wrap items-center">
                 <div>
-                    <img src="static/official_logo.svg" width="60" height="60" alt="RPi Logo">
+                    <img src="/pi-logo.svg" width="60" height="60" alt="RPi Logo">
                 </div>
                 <div class="items-center pl-4">
                     <h1 class="font-bold text-gray-100 text-4xl">Raspberry Pi Stats</h1>
