--- a/views/index.html
+++ b/views/index.html
@@ -165,7 +165,7 @@
                             <h5 class="font-bold text-gray-400">Frequency</h5>
                             <h3 class="font-bold text-3xl text-gray-600">
                                 {{ .cpu_freq }}
-                                <span class="text-green-500">Hz</span>
+                                <span class="text-green-500">MHz</span>
                             </h3>
                         </div>
                     </div>
